# real-life-mini-map

./: .gitattributes  CMakeLists.txt  main.cpp  osmium_test
data/: sh-map.pbf
